restyle some styles

--- a/src/assets/sass/website/components/contact/contact-data-box.scss
+++ b/src/assets/sass/website/components/contact/contact-data-box.scss
@@ -79,6 +79,7 @@ div /deep/ {
   @include filled-half-clipped-shape(
     $widths-and-heights,
     transparent,
-    transparent
+    transparent,
+    11px
   );
 }
