--- a/src/assets/sass/website/components/jobs/jobs-main-content.scss
+++ b/src/assets/sass/website/components/jobs/jobs-main-content.scss
@@ -106,7 +106,7 @@
     p {
       font-family: "Arial" !important;
       color: $header-item;
-      // font-weight: bold;
+      font-weight: bold;
       font-size: 1.8rem;
       margin-bottom: 0;
     }
