--- a/src/assets/sass/website/components/about/about-clients.scss
+++ b/src/assets/sass/website/components/about/about-clients.scss
@@ -125,7 +125,7 @@
 }
 
 .clients-wrapper {
-  background-color: $form-background;
+  background-color: $section-color;
   border-radius: 10px;
   padding: 28px 0;
 }
