--- a/src/assets/sass/website/components/home/services-carousel.scss
+++ b/src/assets/sass/website/components/home/services-carousel.scss
@@ -270,30 +270,7 @@ $extra-mob-dim: $slide-height-mobile;
 /deep/ .hero-bullets {
   display: none;
 }
-/deep/ .half-filled-box {
-  // min-height: 555px;
-}
 
-@media (max-width: 1600px) {
-  /deep/ .half-filled-box {
-    // min-height: 675px;
-  }
-}
-@media (max-width: 1100px) {
-  /deep/ .half-filled-box {
-    // min-height: 820px;
-  }
-}
-@media (max-width: 767px) {
-  /deep/ .half-filled-box {
-    // min-height: 993px;
-  }
-}
-@media (max-width: 600px) {
-  /deep/ .half-filled-box {
-    // min-height: 90vh;
-  }
-}
 // /deep/ .carousel-wrapper__slide {
 //   padding-left: 40px;
 //   @include is-extra-small-mobile {
@@ -416,6 +393,7 @@ div /deep/ {
   @include filled-half-clipped-shape(
     $widths-and-heights,
     $section-color,
-    $green-stroke
+    $green-stroke,
+    11px
   );
 }
