--- a/src/assets/sass/website/components/home/work-carousel.scss
+++ b/src/assets/sass/website/components/home/work-carousel.scss
@@ -497,6 +497,7 @@ div /deep/ {
   @include filled-half-clipped-shape(
     $widths-and-heights,
     transparent,
-    $green-stroke
+    $green-stroke,
+    11px
   );
 }
