--- a/src/assets/sass/website/containers/job-details.scss
+++ b/src/assets/sass/website/containers/job-details.scss
@@ -6,11 +6,12 @@
   // @include initializePageStyle;
   background-color: $accent;
   // padding-top: 80px;
-  border-radius: 10px;
+  border-radius: 11px;
   width: 80%;
   max-height: calc(100vh - #{$page-margin});
-  padding: 0 1%;
+  padding: 80px 50px !important;
   margin: auto;
+  margin-top: 180px;
   @include is-extra-small-mobile {
     overflow-y: auto;
     margin-top: 20px;
@@ -22,7 +23,6 @@
     width: 80%;
   }
   &__container {
-    margin-top: 170px;
     width: 100%;
     // margin: auto;
     @include is-extra-small-mobile {
@@ -42,6 +42,7 @@
       width: 70%;
     }
     h1 {
+      margin-top: 0;
       font-size: 30px;
       @include is-extra-small-mobile {
         font-size: 1.3rem;
@@ -51,6 +52,7 @@
       }
     }
     h2 {
+      margin-top: 0;
       font-size: 2rem;
       font-weight: bold;
       @include is-extra-small-mobile {
@@ -61,6 +63,7 @@
       }
     }
     h3 {
+      margin-top: 20px;
       font-size: 30px;
       @include is-extra-small-mobile {
         font-size: 1.3rem;
