--- a/src/assets/sass/website/containers/services.scss
+++ b/src/assets/sass/website/containers/services.scss
@@ -138,6 +138,7 @@ div /deep/ {
   @include filled-half-clipped-shape(
     $widths-and-heights,
     transparent,
-    transparent
+    transparent,
+    11px
   );
 }
