--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -79,6 +79,12 @@ $transition-3: all 0.3s ease-in-out;
     }
 
     .footer-social-media {
+      display: flex;
+      justify-content: flex-end;
+      padding-right: 80px;
+      &__content {
+        width: max-content;
+      }
       .footer-followus {
         width: 108px;
         position: relative;
@@ -168,6 +174,9 @@ $transition-3: all 0.3s ease-in-out;
     }
 
     .footer-nav {
+      ul {
+        padding: 0;
+      }
       .nav-link {
         padding: 0;
       }
