--- a/src/assets/sass/website/variables.scss
+++ b/src/assets/sass/website/variables.scss
@@ -1,9 +1,9 @@
-$header-height: 120px;
+$header-height: 100px;
 $header-height-mobile: 75px;
 $header-item-underline-height: 5px;
 $header-item-underline-width: 60%;
-$header-active-item-font: 1.4rem;
-$header-inactive-item-font: 1.2rem;
+$header-active-item-font: 20px;
+$header-inactive-item-font: 20px;
 
 $footer-height: 80px;
 $footer-height-mobile: 100px;
@@ -13,7 +13,7 @@ $total-border-thickness: 2px;
 
 $transition-time: 0.3s;
 
-$input-form-height: 40px;
+$input-form-height: 30px;
 
 $half-clipped-shape-padding: 20px;
 
