restyle some styles for mobile

--- a/src/assets/sass/website/components/about/about-clients-data.scss
+++ b/src/assets/sass/website/components/about/about-clients-data.scss
@@ -15,6 +15,12 @@
     max-height: 80px;
     margin: 10% 22%;
     cursor: pointer;
+    @include is-mobile {
+      margin: 10% 20%;
+    }
+    @include is-extra-small-mobile {
+      margin: 10% 20%;
+    }
   }
   .hide-border {
     // margin-top: 0;
