--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -82,8 +82,22 @@ $transition-3: all 0.3s ease-in-out;
       display: flex;
       justify-content: flex-end;
       padding-right: 80px;
+      @include is-extra-small-mobile {
+        justify-content: center;
+        padding-right: 0;
+      }
+      @include is-mobile {
+        justify-content: center;
+        padding-right: 0;
+      }
       &__content {
         width: max-content;
+        @include is-extra-small-mobile {
+          margin-top: 10px;
+        }
+        @include is-mobile {
+          margin-top: 10px;
+        }
       }
       .footer-followus {
         width: 108px;
@@ -155,7 +169,7 @@ $transition-3: all 0.3s ease-in-out;
             width: 20px;
           }
           img {
-            width: 30px;
+            width: 17.5px;
           }
         }
         @include is-mobile {
@@ -230,6 +244,14 @@ $transition-3: all 0.3s ease-in-out;
   .copyrights {
     color: $light-gray;
     background-color: $primary;
+    @include is-extra-small-mobile {
+      display: flex;
+      justify-content: center;
+    }
+    @include is-mobile {
+      display: flex;
+      justify-content: center;
+    }
     a {
       text-decoration: none;
       color: $accent;
@@ -243,9 +265,11 @@ $transition-3: all 0.3s ease-in-out;
       margin-bottom: 0;
       padding-left: 30px;
       @include is-extra-small-mobile {
+        padding-left: 0;
         font-size: 0.7rem;
       }
       @include is-mobile {
+        padding-left: 0;
         font-size: 0.9rem;
       }
     }
