--- a/src/assets/sass/website/containers/job-details.scss
+++ b/src/assets/sass/website/containers/job-details.scss
@@ -14,12 +14,12 @@
   margin-top: 180px;
   @include is-extra-small-mobile {
     overflow-y: auto;
-    margin-top: 20px;
+    margin-top: 80px;
     width: 80%;
   }
   @include is-mobile {
     overflow-y: auto;
-    margin-top: 20px;
+    margin-top: 80px;
     width: 80%;
   }
   &__container {
@@ -44,6 +44,7 @@
     h1 {
       margin-top: 0;
       font-size: 30px;
+      word-break: keep-all;
       @include is-extra-small-mobile {
         font-size: 1.3rem;
       }
@@ -55,6 +56,7 @@
       margin-top: 0;
       font-size: 2rem;
       font-weight: bold;
+      word-break: keep-all;
       @include is-extra-small-mobile {
         font-size: 1.5rem;
       }
