--- a/src/assets/sass/website/components/jobs/jobs-main-content.scss
+++ b/src/assets/sass/website/components/jobs/jobs-main-content.scss
@@ -90,6 +90,13 @@
       margin: 6px;
       border-radius: 10px;
       //   height: 80%;
+      @include is-mobile {
+        width: 90%;
+      }
+      @include is-extra-small-mobile {
+        width: calc(100% - 6px);
+        margin: 6px 6px 6px 0;
+      }
     }
   }
   &__job-title {
