--- a/src/assets/sass/website/components/about/about-clients-data.scss
+++ b/src/assets/sass/website/components/about/about-clients-data.scss
@@ -15,6 +15,12 @@
     max-height: 80px;
     margin: 10% 22%;
     cursor: pointer;
+    @include is-desktop {
+      width: 55%;
+    }
+    @include is-large-desktop {
+      width: 55%;
+    }
     @include is-mobile {
       margin: 10% 20%;
     }
