--- a/src/assets/sass/website/variables.scss
+++ b/src/assets/sass/website/variables.scss
@@ -23,6 +23,7 @@ $hero-image-height: 248px;
 $half-page-hero-image-height: 60vh;
 
 $slide-height: 180px;
+$slide-height-desktop: 220px;
 $slide-height-mobile: 350px;
 
 $about-container-height: 250px;
