--- a/src/assets/sass/website/components/jobs/jobs-main-content.scss
+++ b/src/assets/sass/website/components/jobs/jobs-main-content.scss
@@ -23,10 +23,36 @@
   &__container {
     width: 100%;
     margin: auto;
+    min-height: calc(100vh - #{$footer-height} - 60vh);
     user-select: none;
     position: relative;
     background-color: $accent;
     z-index: 102;
+    h1 {
+      height: fit-content;
+      margin: 80px auto 0 !important;
+      font-size: 1.5rem;
+      margin: 0 auto;
+      text-align: center;
+      span {
+        width: 100%;
+        text-align: center;
+        font-family: "Arial Bold" !important;
+        &:first-child {
+          font-family: "Arial" !important;
+        }
+      }
+      @include is-mobile {
+        margin-top: 80px;
+        font-size: 1.2rem;
+        margin: 40px auto 0 !important;
+      }
+      @include is-extra-small-mobile {
+        margin-top: 80px;
+        font-size: 1.2rem;
+        margin: 40px auto 0 !important;
+      }
+    }
   }
   &__title {
     width: 70%;
@@ -53,6 +79,12 @@
       //   width: 57%;
       text-align: center;
       font-size: 1.4rem;
+      @include is-mobile {
+        font-size: 1rem;
+      }
+      @include is-extra-small-mobile {
+        font-size: 1rem;
+      }
       //   @include is-large-desktop {
       //     width: 70%;
       //   }
@@ -89,7 +121,8 @@
       padding: 10px;
       margin: 6px;
       border-radius: 10px;
-      //   height: 80%;
+      height: 115px;
+      max-height: 115px;
       @include is-mobile {
         width: 90%;
       }
