--- a/src/assets/sass/website/app.scss
+++ b/src/assets/sass/website/app.scss
@@ -79,6 +79,7 @@ body {
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
+  min-height: 50vh;
 }
 
 .slick-list,
