--- a/src/assets/sass/website/shared/header.scss
+++ b/src/assets/sass/website/shared/header.scss
@@ -17,9 +17,21 @@ $around-nav-width: calc(100% - #{$nav-width});
     padding: 8px;
     display: flex;
     width: $around-nav-width;
+    @media (min-width: 1765px) and (max-width: 1900px) {
+      width: calc(#{$around-nav-width} + 2%);
+    }
+    @media (min-width: 1400px) and (max-width: 1764px) {
+      width: calc(#{$around-nav-width} + 3%);
+    }
+    @media (min-width: 1400px) and (max-width: 1699px) {
+      padding: 8px 2px;
+      width: calc(#{$around-nav-width} + 7%);
+    }
+    @media (max-width: 1399px) {
+      display: none;
+    }
     &__logos {
       height: fit-content;
-      width: 100%;
       cursor: pointer;
       width: fit-content;
       z-index: 200;
@@ -133,6 +145,15 @@ $around-nav-width: calc(100% - #{$nav-width});
     }
     &--inactive {
       font-size: $header-inactive-item-font;
+      @media (min-width: 1735px) and (max-width: 1900px) {
+        font-size: 1.2rem;
+      }
+      @media (min-width: 1400px) and (max-width: 1734px) {
+        font-size: 1.1rem;
+      }
+      @media (min-width: 1400px) and (max-width: 1699px) {
+        font-size: 1rem;
+      }
       &::before {
         @include header-item-hover-effect(0, $header-item-underline-height, 0);
       }
